k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-service
  namespace: nodejs-app-namespace
spec:
  selector:
    app: nodejs-app
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
